meu_projeto/static/styles.css
@media (max-width: 600px) {
  .video-grid {
      display: grid;
      grid-template-columns: repeat(3, 1fr) !important;
      gap: 20px;
  }

  body, html {
      height: 100%; /* Ensure the body and html elements cover the full page height */
      overflow-x: hidden !important;
      font-family: 'Century Gothic', sans-serif;
  }

  input[type="search"] {
    width: 20vh !important;  /* Adjust this value as needed */
    height: 5vh;
  }

  .random-video-wallpaper {
      height: 50%; /* Set a minimum height of 50% of the viewport height */
      overflow: hidden;
  }

  .wallpaper-image {
      width: 100vh !important;
      height: 100vh !important;
      object-fit: cover; /* Change this from fill to cover */
      object-position: center top; /* Center vertically and keep zoom effect at the top */
  }

  .text-overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    color: #F1F1F1;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .text-overlay .logo-image {
    position: absolute;
    top: 20% !important;
    left: 50% !important;
    transform: translate(-50%, -50%);
    max-width: 70% !important;
    max-height: 70% !important;
    width: auto !important;
    height: auto !important;
  }

  .rating .material-symbols-outlined {
    margin-right: 10% !important;
  }

  .rating p {
    position: absolute;
    top: 38% !important;
    left: 50% !important;
    transform: translate(-50%, -50%);
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .description {
    position: absolute;
    top: 65% !important;
    left: 50% !important;
    transform: translate(-50%, -50%) !important;
    max-width: 100% !important;
    max-height: 100% !important;
    width: max-content !important;
    height: auto !important;
    white-space: normal !important;
    padding: 10% !important;
    text-align: justify;
    overflow-y: scroll !important; /* Allows vertical scrolling */
    scrollbar-width: none !important; /* For Firefox */
    -ms-overflow-style: none !important; /* For Internet Explorer and Edge */
  }

  .description::-webkit-scrollbar {
    display: none !important; /* For Chrome, Safari and Opera */
  }


 .watch-button {
   position: absolute;
   top: 90% !important;
   left: 50% !important;
   transform: translate(-50%, -50%);
   max-width: 40% !important;
   max-height: 40% !important;
   width: auto !important;
   height: auto !important;
   white-space: pre-line !important;
 }

 .watch-button button {
   color: black;
   display: flex;
   align-items: center;
   justify-content: center;
 }

}

@media (max-width: 500px) {
  .video-grid {
      display: grid;
      grid-template-columns: repeat(2, 1fr) !important;
      gap: 20px;
  }

  .episode-grid {
    display: grid;
    grid-template-columns: repeat(1, 1fr) !important;
    gap: 20px;
    margin-left: -3vh !important;

  }

  #video-frame {
    height: 20vh !important;
    width: 45vh !important;
    margin-top: 10vh !important;

  }
  
  .video-title {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    font-weight: bold;
    margin-bottom: 5px;
    width: 50vh !important;
 }

 .channel-icon-largest {
  width: 20vh;
  height: 20vh;
  border-radius: 10vh;
  margin-top: 2vh;
  margin-right: 2vh;
  position: absolute;
  top: 20vh;
  left: 2vh !important;
}

.channel-title-largest {
  font-size: 5vh;
  color: #F1F1F1;
  position: absolute;
  left: 3vh !important;
  top: 45vh !important;
}

.channel-description {
  margin-top: 10vh !important;
}
}

.episode-grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 2vh;
  margin-left: 5vh;
}

.episode-grid-related {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 2vh;
  margin-left: 1vh;
}

#video-frame {
  height: 95vh;
  width: 180vh;
  margin-top: 1vh;
}

.video-list {
  white-space: nowrap;  /* Prevent wrapping to the next line */
  overflow-x: scroll;  /* Enable horizontal scrolling */
  display: flex;      /* Make child elements flex items for proper alignment */
  height: 30vh;
  padding-top: 10vh;
}

.text-overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.7);
  color: #F1F1F1;
  display: flex;
  align-items: center;
  justify-content: center;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}

.text-overlay .logo-image {
  position: absolute;
  top: 40%;
  left: 25%;
  transform: translate(-50%, -50%);
  max-width: 40%;
  max-height: 40%;
  width: auto;
  height: auto;
}

.rating .material-symbols-outlined {
  margin-right: 10%;
}

.rating p {
  position: absolute;
  top: 70%;
  left: 25%;
  transform: translate(-50%, -50%);
  display: flex;
  align-items: center;
  justify-content: center;
}

.menu-icon {
  text-decoration: none;
}

.menu-icon span {
  vertical-align: text-bottom;
}

.menu-icon-two span {
  vertical-align: bottom;
}

.description {
 position: absolute;
 top: 60%;
 left: 70%;
 transform: translate(-50%, -50%);
 max-width: 40%;
 max-height: 40%;
 width: auto;
 height: auto;
 white-space: pre-line;
 text-align: justify;
}

.watch-button {
 position: absolute;
 top: 90%;
 left: 25%;
 transform: translate(-50%, -50%);
 max-width: 40%;
 max-height: 40%;
 width: auto;
 height: auto;
 white-space: pre-line;
}

.watch-button button {
 color: black;
 display: flex;
 align-items: center;
 justify-content: center;
}

/* Optional: Hide the horizontal scrollbar */
.video-list::-webkit-scrollbar {
  display: none;
}

.back-button {
  background-color: #4d4d4d;
  color: #F1F1F1;
 }

 .logo {
   width: 100px;
   height: 32px;
 }

 #a{
     position:fixed;
     top:0;
     left:0;
     width:224px;
     height:429px;
 }

 .random-video-wallpaper {
   position: relative;
   width: auto;
   height: 400px;
   overflow: hidden;
   margin-top: 0;
 }
/* ... */

